--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.5",
     "express": "^4.18.2",
+    "geojson": "^0.5.0",
     "mapbox-gl": "^3.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
